# ChangeLog for dev-python/yolk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/yolk/ChangeLog,v 1.9 2009/04/24 14:29:03 patrick Exp $

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org> -yolk-0.3.0.ebuild:
  Remove old

*yolk-0.4.1 (15 Feb 2009)

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> +yolk-0.4.1.ebuild:
  Bump to 0.4.1

*yolk-0.3.0 (17 Jul 2007)

  17 Jul 2007; Rob Cakebread <pythonhead@gentoo.org> -yolk-0.2.0.ebuild,
  +yolk-0.3.0.ebuild:
  Version bump. Removed obsolete version.

*yolk-0.2.0 (07 Jul 2007)

  07 Jul 2007; Rob Cakebread <pythonhead@gentoo.org> -yolk-0.1.0.ebuild,
  +yolk-0.2.0.ebuild:
  Version bump, dropped obsolete version.

  23 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org> yolk-0.1.0.ebuild:
  Fixed deps, moved NEED_PYTHON before inherit.

  02 Jun 2007; Christoph Mende <angelos@gentoo.org> yolk-0.1.0.ebuild:
  Added ~amd64 wrt bug 179059

*yolk-0.1.0 (18 May 2007)

  18 May 2007; Rob Cakebread <pythonhead@gentoo.org>
  -files/yolk-0.0.7-bad-egg.patch, -yolk-0.0.7-r1.ebuild,
  +yolk-0.1.0.ebuild:
  Version bump, removed old version.

*yolk-0.0.7-r1 (23 Apr 2007)

  23 Apr 2007; Rob Cakebread <pythonhead@gentoo.org>
  +files/yolk-0.0.7-bad-egg.patch, +yolk-0.0.7-r1.ebuild:
  Patch to skip corrupt eggs. Removed previous version.

*yolk-0.0.7 (23 Apr 2007)

  23 Apr 2007; Rob Cakebread <pythonhead@gentoo.org> +metadata.xml,
  +yolk-0.0.7.ebuild:
  Initial commit.
