@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/yolk
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/yolk/ChangeLog,v 1.9 2009/04/24 14:29:03 patrick Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/yolk/ChangeLog,v 1.10 2010/06/30 00:31:30 arfrever Exp $
+
+  30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  yolk-0.4.1.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
   24 Apr 2009; Patrick Lauer <patrick@gentoo.org> -yolk-0.3.0.ebuild:
   Remove old
